--- a/src/.github/workflows/deploy.yaml
+++ b/src/.github/workflows/deploy.yaml
@@ -2,10 +2,10 @@ name: React App CI/CD
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
       branches:
-      - master
+      - main
   workflow_dispatch:
 
 permissions:
