update deply file

--- a/src/.github/workflows/deploy.yaml
+++ b/src/.github/workflows/deploy.yaml
@@ -1,22 +1,21 @@
-name: React App CI/CD 
+name: React App CI/CD
 
 on:
   push:
     branches: [main]
   pull_request:
-      branches:
-      - main
+    branches: [main]
   workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
-  build_and_deply:
+  build_and_deploy:
     runs-on: ubuntu-latest
 
     steps:
-     # Step 1: Checkout code
+      # Step 1: Checkout code
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -24,7 +23,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18' # or your React project's version
+          node-version: '18'
 
       # Step 3: Install dependencies
       - name: Install dependencies
@@ -42,5 +41,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
-          branch: gh-pages
-          folder: build
+          branch: gh-pages   # deployment branch
+          folder: build      # React build folder
