update pacakge json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "testapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vivekprajapati500.github.io/react_test_app/",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
