--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,6 +36,8 @@ jobs:
       # Step 5: Build React app
       - name: Build
         run: npm run build
+        env: 
+          REACT_APP_WELCOME_TEXT: {{ vars.REACT_APP_WELCOME_TEXT }}
 
       # Step 6: Deploy (to GitHub Pages)
       - name: Deploy to GitHub Pages
